--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -486,10 +486,15 @@ header nav .nav-sections ul > li > ul > li {
   font-weight: 500;
 }
 
-@media (width >= 1280px) {
-  header nav .nav-brand img {
+@media (width >= 1280px) and (width < 1980px) {
+  header nav .nav-brand picture {
     width: 52px;
     height: 52px;
+    display: block;
+  }
+  header nav .nav-brand img {
+    width: auto;
+    height: auto;
   }
 
   header nav .nav-sections {
@@ -545,6 +550,7 @@ header nav .nav-sections ul > li > ul > li {
     padding: 30px 0;
     margin: 0 12px;
     font-weight: 700;
+    border: 0;
   }
   
   header nav .nav-sections .default-content-wrapper .button-container a.button:hover {
@@ -552,7 +558,6 @@ header nav .nav-sections ul > li > ul > li {
     color: var( --light-text-color);
     border-top: .25rem solid transparent;
     border-radius: 0;
-    padding: 30px 0;
     margin: 0 12px;
   }
 
@@ -576,7 +581,7 @@ header nav .nav-sections ul > li > ul > li {
   }
   
   header nav .nav-sections .default-content-wrapper > ul > li a {
-    padding: 30px 0;
+    padding: 27px 0;
     text-decoration: none;
     margin: 0 12px;
   }
