--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -53,25 +53,23 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
 
 @media (width >= 360px) and (width < 768px) {
   header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-location {
-    display: none;
+    position: absolute;
+    right: 115px;
+    top: 33px;
   }
 
   header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-location {
-    position: absolute;
-    right: 85px;
-    top: 33px;
+    display: none;
   }
 
   header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-search {
     position: absolute;
-    right: 55px;
+    right: 70px;
     top: 33px;
   }
 
   header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-search {
-    position: absolute;
-    right: 55px;
-    top: 33px;
+    display: none;
   }
  
 
@@ -108,19 +106,12 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     border-bottom: 1px solid var(--light-bbb);
   }
 
-  /* header nav[aria-expanded="true"] .icon.icon-search {
-    position: absolute;
-    right: 65px;
-    top: 30px
-  } */
-
   header nav[aria-expanded="true"] .nav-hamburger {
     position: absolute;
     right: 27px;
     top: 30px;
   }
  
-  
   header .section.nav-tools .icon img {
     height: 20px;
     width: 20px;
@@ -272,12 +263,12 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
 }
 
 /* Desktop  */
-@media (width >= 1280px)and (width <= 1980px) {
+@media (width >= 1280px) and (width <= 1980px) {
   header nav {
     display: flex;
     justify-content: space-between;
     margin: 0 6rem;
-    border-bottom: 1px solid var(--dark-color);
+    border-bottom: 1.5px solid var(--light-bbb);
     padding: 0;
   }
 
