pushing changes related to footer and max width

--- a/blocks/copyright/copyright.css
+++ b/blocks/copyright/copyright.css
@@ -8,6 +8,7 @@
 .copyright-wrapper .copyright .copy-right-content div {
     display: flex;
     gap: 4px;
+    white-space: nowrap;
 }
 
 .copyright-wrapper .copyright .copy-right-content {
