--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,17 +20,13 @@
   --light-color: #eee;
   --dark-color: #ccc;
   --text-color: black;
+  --medium-text-color:#4d4d4d;
   --light-border-color: #666;
   --light-text-color: #262626;
   --light-link-hover-color: #1c69d4;
   --light-grey: #f6f6f6;
   --light-bbb: #bbb;
-
-  /* fonts */
-
-  /* --body-font-family: roboto, roboto-fallback;
-  --heading-font-family: var(--body-font-family);
-  */
+  
   --fixed-font-family: bmwtypenextweb,arial,helvetica,roboto,sans-serif;
 
   /* body sizes */
@@ -72,7 +68,14 @@
 }
 
 body.appear {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+main {
+  flex: 1;
 }
 
 header {
@@ -220,15 +223,38 @@ main img {
 
 /* sections */
 main .section {
-  padding: 64px 16px;
+  max-width: var(--max-component-width);
+  padding: 20px 24px;
 }
 
 /* mobile */
 @media (width >= 600px) {
   main .section {
-    padding: 64px 32px;
+    padding: 20px 24px;
+  }  
+}
+
+/*tablet*/
+@media (width >= 768px){
+  main .section {
+    padding: 20px 48px;
   }
-  
+}
+
+/*desktop*/
+@media (width >= 1280px){
+  main .section {
+    padding: 20px 96px;
+  }
+}
+
+/*large-desktop*/
+@media (width >= 1920px){
+  main .section {   
+    width: 100vw;
+    padding-left:calc(100vw - (var(--max-component-width) - 96px));
+    padding-right:calc(100vw - (var(--max-component-width) - 96px));
+  }
 }
 
 
