fixed lint issues
fixed lint issues

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -277,14 +277,9 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     display: none;
   }
 
-  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-search {
+  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-search, header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-location {
     display: none;
   }
-
-  header nav[aria-expanded="true"] .nav-tools .default-content-wrapper .icon-location {
-    display: none;
-  }
-
 }
 
 /* Desktop  */
@@ -389,6 +384,7 @@ header nav a:any-link {
 }
 
 /* hamburger */
+
 /* header nav .nav-hamburger {
   grid-area: hamburger;
   height: 22px;
