--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -252,6 +252,7 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     height: 20px;
     right: 135px;
     top: 30px;
+    display: none;
   }
 
   header nav[aria-expanded="true"] .bmw-logo-wrapper .bmw-logo img {
@@ -271,6 +272,7 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     top: 30px;
     width: 20px;
     height: 20px;
+    display: none;
   }
 
   header.white-background .claim-container{
