--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,6 +200,15 @@ a.button.secondary, button.secondary {
 a.button.secondary:hover {
   border: 2px solid currentcolor;
 }
+a.button.tertiary, button.tertiary {
+  background-color: unset;
+  border: 1px solid currentcolor;
+  color: var(--text-color)
+}
+
+a.button.tertiary:hover {
+  border: 2px solid currentcolor;
+}
 
 main img {
   max-width: 100%;
