--- a/styles/styles.css
+++ b/styles/styles.css
@@ -251,7 +251,7 @@ main .section {
 /*large-desktop*/
 @media (width >= 1920px){
   main .section {   
-    width: 100vw;
+    max-width: 100vw;
     padding-left:calc(100vw - (var(--max-component-width) - 96px));
     padding-right:calc(100vw - (var(--max-component-width) - 96px));
   }
