--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,6 +52,11 @@
 
   /* maximum width */
   --max-component-width:1920px;
+
+  /* section padding */
+  --section-mobile-padding:24px;
+  --section-tablet-padding:48px;
+  --section-desktop-padding:96px;
 }
 
 
@@ -223,27 +228,20 @@ main img {
 /* sections */
 main .section {
   max-width: var(--max-component-width);
-  padding: 20px 24px;
-}
-
-/* mobile */
-@media (width >= 600px) {
-  main .section {
-    padding: 20px 24px;
-  }  
+  padding: 20px var(--section-mobile-padding);
 }
 
 /* tablet */
 @media (width >= 768px){
   main .section {
-    padding: 20px 48px;
+    padding: 20px var(--section-tablet-padding);
   }
 }
 
 /* desktop */
 @media (width >= 1280px){
   main .section {
-    padding: 20px 96px;
+    padding: 20px var(--section-desktop-padding);
   }
 }
 
@@ -251,8 +249,8 @@ main .section {
 @media (width >= 1920px){
   main .section {   
     max-width: 100vw;
-    padding-left:calc(100vw - (var(--max-component-width) - 96px));
-    padding-right:calc(100vw - (var(--max-component-width) - 96px));
+    padding-left: calc((100vw - (var(--max-component-width) - (var(--section-desktop-padding) * 2 )))/2);
+    padding-right: calc((100vw - (var(--max-component-width) - (var(--section-desktop-padding) * 2 )))/2);
   }
 }
 
