--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -153,7 +153,7 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
     padding: 1.75rem 1.5rem 0;
   }
 
-  header.white-background .claim-container{
+  header.white-background .claim-container {
     display: none;
   }
 
@@ -313,7 +313,7 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
 }
 
 /* Desktop  */
-@media (width >= 1280px){
+@media (width >= 1280px) {
   header nav {
     display: flex;
     justify-content: space-between;
@@ -400,6 +400,108 @@ header.white-background .nav-wrapper .bmw-logo-wrapper .grey-image {
   
   header.white-background nav {
     border-bottom: 1.5px solid var(--background-color)
+  }
+
+  header nav .icon-link-list-container.nav-tools .icon-link-list-container .icon,
+  header.header-wrapper.white-background nav .icon-link-list-container.nav-tools .icon-link-list-container .icon
+  {
+    padding: 22px .75rem;
+    text-decoration: none;
+    cursor: pointer;
+    margin: 0;
+  }
+
+  header nav .icon-link-list-container.nav-tools .icon-link-list-container .icon:hover,
+  header.header-wrapper.white-background nav .icon-link-list-container.nav-tools .icon-link-list-container .icon
+  {
+    border-bottom: .25rem solid var(--light-link-hover-color);
+    border-top: .25rem solid transparent;
+    color:transparent;
+  }
+
+  header nav .icon-link-list-container.nav-tools .icon-container .location:before {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+    content: "location_pin";
+    direction: ltr;
+    display: block;
+    font-family: bmw_next_icons;
+    font-style: normal;
+    height: 1em;
+    line-height: 1;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizeLegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    font-size: 1.25rem;
+    color: #666;
+    font-weight: 400;
+  }
+ 
+  header nav .icon-link-list-container.nav-tools .icon-container .search:before {    
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+    content: "search";
+    direction: ltr;
+    display: block;
+    font-family: bmw_next_icons;
+    font-style: normal;
+    height: 1em;
+    line-height: 1;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizeLegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    font-size: 1.25rem;
+    color: #666;
+    font-weight: 400;
+  } 
+
+  header.header-wrapper.white-background nav .icon-link-list-container.nav-tools .icon-container .location:before {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+    content: "location_pin";
+    direction: ltr;
+    display: block;
+    font-family: bmw_next_icons;
+    font-style: normal;
+    height: 1em;
+    line-height: 1;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizeLegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    font-size: 1.25rem;
+    color: #fff;
+    font-weight: 400;
+  }
+ 
+  header.header-wrapper.white-background nav .icon-link-list-container.nav-tools .icon-container .search:before { 
+    content: "search";
+    direction: ltr;
+    display: block;
+    font-family: bmw_next_icons;
+    font-style: normal;
+    height: 1em;
+    line-height: 1;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizeLegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    font-size: 1.25rem;
+    color: #fff;
+    font-weight: 400;
   }
  
 }
