js, css change for location, search icon

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -683,6 +683,14 @@ header nav .nav-tools {
   grid-area: tools;
 }
 
+header nav .nav-tools .location > i::after {
+  content: url('/icons/location.svg');
+}
+
+header nav .nav-tools .search > i::after {
+  content: url('/icons/search.svg');
+}
+
 /* mobile */
 @media (width < 768px) {
   header nav {
